# rasterfari

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
docs/diagrams/: classdiagram.puml
src/: camera.cpp  camera.hpp  display.cpp  display.hpp  imagebuffer.cpp  imagebuffer.hpp  logger.cpp  logger.hpp  main.cpp  mathy.hpp  model.cpp  model.hpp  mymath.hpp  objparser.cpp  objparser.hpp  rasterfari.cpp  rasterfari.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  tgaimage.cpp  tgaimage.hpp
src/geometry/: item.hpp  mesh.cpp  mesh.hpp  scene.hpp
src/math/: mathy.hpp  matrix.hpp  point.hpp  vector.hpp  vertex.hpp
